@@ -29,7 +29,7 @@ contains
     use m_setup_hamiltonian
     use m_setup_H0
     use m_steps
-    use sparse_matrices, only: Dscf, Escf, maxnh
+    use sparse_matrices, only:H, Dscf, Escf, maxnh, numh, listhptr
     use m_eo,          only: eo
     use m_energies,    only: Etot           ! Total energy
     use atomlist,      only: no_s, no_l, no_u, indxuo
@@ -42,7 +42,7 @@ contains
 
     use alloc
     use m_initwf,         only: initwf
-    use wavefunctions,    only: wavef_ms, iowavef
+    use wavefunctions,    only: wavef_ms, iowavef, compute_tddm
     use m_evolve,         only: evolve
     use m_iotddft,        only: write_tddft
     use m_overfsm,        only: overfsm
@@ -54,9 +54,10 @@ contains
     integer, intent(inout)  :: istep
     
     integer :: mod_tded, mod_md
-    integer :: istpp
+    integer :: istpp, ispin
     real(dp) :: dt_tded, G2max
-
+    ! temporary variables for testing, delete after tests
+    integer :: i, kk, ind
 #ifdef DEBUG
     call write_debug( '    PRE siesta_tddft' )
 #endif
@@ -109,19 +110,25 @@ contains
     ! The first call to change basis only calculates S^+1/2
     call chgbasis(no_s, nspin, nspin, no_l, maxnh, maxnh, &
          no_u, gamma, indxuo, nkpnt, kpoint, kweight, &
-         Dscf, no_u,istep)
+         no_u,istep)
     
     ! Read the initial wavefunctions.
+    ! In future reading wavefunctions can be moved before
+    ! changebasis and then the first DM can be computed within
+    ! changesbasis. Moving up iowavef would require a call to 
+    ! ms_scalapack_setup. Which is now implicit in changebasis. 
+
     if ( istep == 1 ) then
-       
        allocate(wavef_ms(nkpnt,nspin))
        call iowavef('read',wavef_ms,no_u,nkpnt,nspin, istpp, &
             rstart_time)
+       write(6,'(a)') 'Computing DM from initial KS wavefunctions'
+       DO ispin=1,nspin
+         call compute_tddm(ispin, Dscf)
+       END DO
        istep = istpp + 1
-       
     end if
-    
-    ! To save the TD-wavefunctions and Density matrix to restart
+    ! To save the TD-wavefunctions for a restart.
     mod_md = mod(istep, tdednwrite)
 
     if( mod_md == 0 .or. istep == fincoor ) then
@@ -139,18 +146,18 @@ contains
                '                     ************************       '
        end if
        
-       ! To save the TD-wavefunctions and density matrix to restart
+       ! To save the TD-wavefunctions to restart
        mod_tded = mod(itded, tdednwrite)
        
        if ( mod_tded == 0 ) then
           call iowavef('write',wavef_ms,no_u,nkpnt,nspin, istep, totime)
        end if
        
-       call setup_hamiltonian( itded )
+       call setup_hamiltonian( 3 )
        
        call evolve(no_s,nspin,nspin,no_l,maxnh,maxnh,no_u, &
             gamma, indxuo,nkpnt,kpoint,kweight, &
-            Dscf, Escf, no_u, dt_tded,istep,itded)
+            Escf, no_u, dt_tded,istep,itded)
        
        ! The total simulation time mainly for plotting
        totime = (istep*dt - dt) + (itded*dt_tded-dt_tded)
