@@ -6,6 +6,7 @@ MODULE  wavefunctions
   !    
   type(matrix), allocatable, save :: wavef_ms(:,:)
   ! 
+
 CONTAINS
   !
   subroutine iowavef(task,wavef_rw,nuotot,nk,nspin,istpp,totime)
@@ -28,20 +29,20 @@ CONTAINS
     !
     implicit none
     !
-    integer, intent(in)  :: nuotot, nk, nspin
-    integer, intent(inout) :: istpp
+    integer, intent(in)             :: nuotot, nk, nspin
+    integer, intent(inout)          :: istpp
     double precision, intent(inout) :: totime
-    character*(*), intent(in):: task
-    type(matrix), intent(inout)  :: wavef_rw(nk,nspin)
+    character*(*), intent(in)       :: task
+    type(matrix), intent(inout)     :: wavef_rw(nk,nspin)
     ! Internal variables and arrays
-    character :: fname*33, sname*30, m_storage*5
-    logical   ::  exist1, frstme
-    integer   :: unit1, ie,nuototread,nkread,nspinread,dim2read
-    integer   :: nwf, ik, ispin, mxnwf, io, ix,i,j
-    external  :: chkdim, io_assign, io_close, timer,memory
-    complex(kind=dp) :: varaux
-    save      :: frstme, fname
-    data         frstme /.true./
+    character         :: fname*33, sname*30, m_storage*5
+    logical           ::  exist1, frstme
+    integer           :: unit1, ie,nuototread,nkread,nspinread,dim2read
+    integer           :: nwf, ik, ispin, mxnwf, io, ix,i,j
+    external          :: chkdim, io_assign, io_close, timer,memory
+    complex(kind=dp)  :: varaux
+    save              :: frstme, fname
+    data                 frstme /.true./
     !
 #ifdef MPI
     INTEGER :: MPIerror
@@ -55,6 +56,11 @@ CONTAINS
     Nodes = 1
 #endif
     !
+#ifdef MPI
+      m_storage='pzdbc'
+#else
+      m_storage='szden'
+#endif
     ! Find file name
     if (frstme) then
       if (Node.eq.0) then
@@ -63,11 +69,6 @@ CONTAINS
 #ifdef MPI
       call MPI_Bcast(sname,30,MPI_character,0,MPI_Comm_World,MPIerror)
 #endif
-#ifdef MPI
-      m_storage='pzdbc'
-#else
-      m_storage='szden'
-#endif
       fname = trim(sname)//'.TDWF'
       frstme = .false.
     endif
@@ -75,7 +76,10 @@ CONTAINS
     if (task.eq.'read' .or. task.eq.'READ') then      ! task read
       if (Node.eq.0) then
         inquire (file=fname, exist=exist1)
-        if(.not.exist1) then 
+        if(exist1) then
+          write(6,'(/,a)')                                            &
+          'iowavef: reading initial KS wavefunctions from file'
+         else
           write(6,'(/,a)')                                            &
           'iowavef: file containing the KS orbitals not found'
           write(6,'(a)')                                              &
@@ -84,7 +88,7 @@ CONTAINS
         endif
         call io_assign(unit1)
         open( unit1, file=fname, form='unformatted',                 &
-        status='unknown' )
+        status='old' )
         read(unit1) istpp, totime
       endif
 #ifdef MPI 
@@ -126,7 +130,7 @@ CONTAINS
     elseif(task.eq.'write'.or.task.eq.'WRITE') then     ! task write
       if (Node.eq.0) then
         call io_assign(unit1)
-        open( unit1, file=fname, form='unformatted',status='unknown' )
+        open( unit1, file=fname, form='unformatted',status='replace' )
         rewind(unit1)
         write(unit1) istpp, totime
         write(unit1) nuotot,nk,nspin
@@ -156,5 +160,61 @@ CONTAINS
     endif            ! end task 
     !
   end subroutine iowavef
+  !
+  subroutine  compute_tddm(ispin,Dnew)
+  
+    ! To calculate the time-dependent density matrix from time-dependent
+    ! wavefunctions. 
+    ! Written by Rafi Ullah January 2017
+    !***********************************
+    use sparse_matrices,      only: numh, maxnh, listh, listhptr,     &
+                                    xijo   
+    use Kpoint_grid,          only: nkpnt, kpoint, gamma_scf
+    use atomlist,             only: no_l, no_u
+    use m_spin,               only: nspin
+    integer                      :: ispin, nuo, nuotot
+    integer                      :: io,jo, j, ind, ik
+    double precision             :: Dnew (maxnh, nspin), spfa, kxij
+    double precision             :: ckxij, skxij
+    complex(dp)                  :: varaux
+    type(matrix)                 :: Daux    
+    character                    :: m_storage*5, m_operation*3
+#ifdef MPI
+    m_storage   ='pzdbc'
+    m_operation = 'lap'
+#else
+    m_storage='szden'
+    m_operation = 'lap'
+#endif
+    spfa = dble(3-nspin)
+    Dnew(:,ispin) = 0.0_dp
+    call m_allocate(Daux,no_u,no_u,m_storage)
+    DO ik=1,nkpnt
+      ! Calculating density matrix using MatrixSwitch.
+      call mm_multiply(wavef_ms(ik,ispin),'n',wavef_ms(ik,ispin),'c',Daux,           & 
+                    cmplx(spfa,0.0_dp,dp),cmplx(0.0_dp,0.0_dp,dp),m_operation)
+      ! Passing DM from dense to sparse form.  
+      DO io=1,no_l
+        DO j=1,numh(io)
+          ind=listhptr(io) + j
+          jo = listh(ind)
+          IF (.NOT. gamma_scf) THEN
+            kxij = kpoint(1,ik) * xijo(1,ind) + &
+            kpoint(2,ik) * xijo(2,ind) +        &
+            kpoint(3,ik) * xijo(3,ind) 
+            ckxij =  cos(kxij)
+            skxij = -sin(kxij)
+          ELSE
+            ckxij = 1.0_dp
+            skxij = 0.0_dp
+          END IF
+          varaux = real(Daux%zval(jo,io))*ckxij +     &
+                   aimag(Daux%zval(jo,io))*skxij
+          Dnew(ind,ispin)  = Dnew(ind, ispin) + varaux
+        END DO
+      END DO
+    END DO
+    call m_deallocate (Daux)
+  end subroutine compute_tddm
   !
 end module wavefunctions       
